# Carby-Studio

./: .coverage  AGENTS.md  AGENT_INTEGRATION_REPORT.md  AUDIT_FIXES.md  AUDIT_REPORT_2026-03-30.md  CHANGELOG.md  CODE_DOCUMENTATION_AUDIT_v3.2.1.md  CONCURRENT_FIX_SUMMARY.md  CONSTITUTION.md  CONTRIBUTING.md  CR-5_NESTED_TRANSACTION_FIX.md  ES-3_MULTIPLE_LOCKS_FIX.md  ES-4_DOUBLE_LOCKING_FIX.md  FINAL_EVALUATION_REPORT.md  FINAL_SECURITY_AUDIT_REPORT.md  FINAL_SECURITY_AUDIT_REPORT_2026-03-30_POST_REMEDIATION.md  FINAL_TEST_REPORT.md  FIXES_SUMMARY_2026-03-30.md  FRAMEWORK_ENHANCEMENT.md  HI-3_TRANSACTION_BOUNDARIES_FIX.md  HMAC_VERIFICATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_CR-4.md  IMPLEMENTATION_SUMMARY_TDD_DESIGN_GATE.md  INT-N1_CROSS_MODULE_STATE_FIX.md  LICENSE  N4_WORK_ITEM_STATE_FIX.md  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PHASE_ENFORCEMENT_REVIEW.md  PROCESS_AUDIT.md  README.md  REMEDIATION_PLAN_v3.2.1.md  ROADMAP_EVALUATION.md  ROADMAP_STEPS_2-8.md  ROLLBACK_FIX_SUMMARY.md  SECURITY.md  SESSION_HANDOFF.md  SKILL.md  (+20 more)
.carby-sprints/: .state-key
.carby-sprints/e2e-test/: metadata.json
.carby-sprints/fresh-test/: metadata.json
.carby-sprints/test-bug/: metadata.json
.carby-sprints/test-sprint-001/: metadata.json
agents/: build.md  deliver.md  design.md  discover.md  verify.md
agents/sprint/: build-sprint.md  deliver-sprint.md  design-sprint.md  discover-sprint.md  verify-sprint.md
bot/: .coverage  .env  BOT_IMPLEMENTATION_GUIDE.md  BOT_SPEC.md  CRITICAL_FIXES.md  E2E_TESTING_PLAN.md  FINAL_DESIGN_V1.md  FINAL_MENU_DESIGN.md  FINAL_SELF_EVALUATION.md  FINAL_SELF_EVALUATION_V1.md  FIXES_IMPLEMENTED.md  IMPLEMENTATION_PLAN.md  MIGRATION_COMPLETE.md  PHASE3_SUMMARY.md  PROPOSAL_CARBY_SPRINT_MIGRATION.md  SELF_EVALUATION.md  SELF_EVALUATION_REPORT.md  SETUP_GUIDE.md  TELEGRAM_UX_SPECIFICATION.md  TEST_RESULTS.md  TEST_RESULTS_DETAILED.json  TEST_SUMMARY.md  USER_GUIDE.md  VERIFICATION_REPORT.md  atomic_file.py  bot.py  carby_bot.py  cli_executor.py  config.py  deploy.sh  error_handler.py  file_lock.py  loading_indicator.py  monitor.sh  nlu_handler.py  notification_service.py  safety.py  security_config.py  state_manager.py  telegram_handler.py  (+18 more)
bot/tests/: test_e2e_flows.py
carby_sprint/: STATE_FILE_PROTECTION_IMPLEMENTATION.md  __init__.py  agent_callback.py  authority.py  cli.py  demo_tamper_detection.py  design_gate.py  exceptions.py  gate_agent_map.py  gate_enforcer.py  gate_state.py  gate_token.py  health_monitor.py  json_cache.py  lock_manager.py  path_utils.py  phase_lock.py  phase_lock_service.py  py.typed  sprint_repository.py  test_audit_log_integrity.py  test_authority.py  test_gate_enforcement.py  test_health_monitor.py  test_integrity_implementation.py  test_lock_manager.py  test_phase_lock_service.py  test_retention_policy.py  test_state_file_protection.py  test_user_attribution.py  transaction.py  transaction_boundary.py  two_phase_commit.py  user_context.py  validators.py  verify_agent.py
carby_sprint.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
carby_sprint/commands/: __init__.py  approve.py  control.py  doctor.py  gate.py  init.py  list.py  phase.py  plan.py  start.py  status.py  verify_logs.py  work_item.py
carby_sprint/lib/: __init__.py  gate_audit.py  gate_key_storage.py  signed_audit_log.py
commit-docs/: CHANGELOG_ENTRY.md  COMMIT_MESSAGE.md  FILES_CHANGED.txt  IMPLEMENTATION_SUMMARY.md
docs/: AGENT_CREDENTIAL_POLICY.md  BITWARDEN_DESIGN.md  BITWARDEN_INTEGRATION.md  PHASE_LOCK.md  PREREQUISITES.md  api.md  cli-reference.md  continuity.md  getting-started.md  migration-guide.md
lib/: bitwarden_dao.py  credentials_handler.py  gate_enforcer.py  session_manager.py
scripts/: carby-bridge.py  carby-studio  check-prerequisites.sh  doc-compliance  doc-compliance-check.py  gate_audit.py  gate_cli.py  gate_crypto.py  gate_enforcer.py  gate_storage.py  gate_types.py  generate_manifest.py  language_detector.py  metrics.py  migrate-to-bitwarden.sh  spawn-sprint-agent.sh  sprint-agent-bridge.py  task_manager.py  validator.py
team-tasks/: README.md  SKILL.md
team-tasks/scripts/: backend.py  task_manager.py
templates/: README.md  credential_manifest_template.md  design.md  requirements.md  task.md
templates/python/: .dockerignore  .gitignore  Dockerfile  README.md  STRUCTURE.md  pyproject.toml
templates/python/src/: __init__.py  config.py  main.py
templates/python/src/models/: __init__.py
templates/python/src/routers/: __init__.py
templates/python/src/services/: __init__.py
templates/python/tests/: conftest.py  test_main.py
templates/rust/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  STRUCTURE.md
templates/rust/src/: config.rs  lib.rs  main.rs
templates/rust/src/handlers/: health.rs
templates/rust/src/routes/: mod.rs
templates/rust/tests/: health_test.rs
tests/: AGENT_TEST_RESULTS.md  E2E_TEST_REPORT.md  EDGE_TEST_REPORT.md  INTEGRATION_TEST_RESULTS.md  SEQUENTIAL_MODE_TEST_SUMMARY.md  TEST_RESULTS.md  edge_case_tests.sh  run_all_tests.sh  test_authority.py  test_bitwarden_integration.py  test_cli.sh  test_commands_init.py  test_commands_plan.py  test_concurrent_fix.sh  test_cross_module_cache.py  test_cross_module_cache_v2.py  test_cross_module_state_fix.py  test_design_gate.py  test_e2e_sprint_lifecycle.py  test_gate_state_race.py  test_gate_state_reentrant_locks.py  test_health_monitor.py  test_hmac_verification.py  test_integration.sh  test_multiple_locks_fix.py  test_nested_locks.py  test_path_traversal_fix.py  test_phase_cli.py  test_phase_lock.py  test_phase_lock_enforcement.py  test_phase_lock_service.py  test_phase_lock_toctou.py  test_security.py  test_sequential_mode.py  test_smoke.sh  test_step2_edge015_comprehensive.sh  test_task_manager.sh  test_tdd_protocol.py  test_transaction_boundary.py  test_two_phase_commit.py  (+3 more)
(+49 files in other folders)
