[package]
name = "projectname"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "{{PROJECT_DESCRIPTION}}"
license = "MIT"
repository = "https://github.com/example/{{PROJECT_NAME}}"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.34", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "migrate", "uuid", "chrono"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
async-trait = "0.1"

[dev-dependencies]
# Testing
reqwest = { version = "0.11", features = ["json"] }
http-body-util = "0.1"
axum-test = "14.0"

# Mocking
mockall = "0.12"

# Test utilities
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
